# chess

./: .gitignore  Board.qml  CMakeLists.txt  Cell.qml  CheckMateDialog.qml  Chess.pro  DrawGameDialog.qml  Figure.qml  README.md  TransformDialog.qml  UndoBtn.qml  board.cpp  board.hpp  figures.cpp  figures.hpp  game.cpp  game.hpp  main.cpp  main.qml  resources.qrc  signals.hpp
.github/workflows/: codeql-analysis.yml
android/: AndroidManifest.xml
src/: CMakeLists.txt  board.cpp  board.hpp  figures.cpp  game.cpp  game.hpp  main.cpp  resources.qrc  src.pro
src/android/: AndroidManifest.xml
src/qml/: Board.qml  Cell.qml  CheckMateDialog.qml  DrawGameDialog.qml  TransformDialog.qml  TransformRadioButton.qml  UndoBtn.qml  main.qml
